--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
 
     <title>Cover Template for Bootstrap</title>
 
+
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- FontAwesome stuff -->
+    <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
 
     <!-- Custom styles for this template -->
     <link href="css/cover.css" rel="stylesheet">
@@ -25,26 +29,55 @@
 
           <div class="masthead clearfix">
             <div class="inner">
-              <h3 class="masthead-brand">Cover</h3>
+              <h4 class="masthead-brand"><a href="tel:1-570-296-8094">(570) 296-8094</a></h4>
               <nav class="nav nav-masthead">
-                <a class="nav-link active" href="#">Home</a>
-                <a class="nav-link" href="#">Features</a>
-                <a class="nav-link" href="#">Contact</a>
+                <a class="nav-link" href="menus/current.pdf">
+                  <div><i class="fa fa-file fa-2x" aria-hidden="true"></i></div>
+                  <div class="nav-link-word">menus</div>
+                </a>
+                <a class="nav-link" href="https://goo.gl/maps/R2Di3JfENwP2">
+                  <div><i class="fa fa-map fa-2x" aria-hidden="true"></i></div>
+                  <div class="nav-link-word">directions</div>
+               </a>
+                <a class="nav-link" href="http://www.facebook.com/forktl">
+                  <div><img src="img/facebook-white.png" class="social-button"/></div>
+                  <div class="nav-link-word">facebook</div>
+                </a>
+                <a class="nav-link" href="http://www.instagram.com/theforktl/">
+                  <div><img src="img/instagram-glyph-white.png" class="social-button"/></div>
+                  <div class="nav-link-word">instagram</div>
+                </a>
               </nav>
             </div>
           </div>
 
           <div class="inner cover">
-            <h1 class="cover-heading">Cover your page.</h1>
-            <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
-            <p class="lead">
-              <a href="#" class="btn btn-lg btn-secondary">Learn more</a>
-            </p>
+            <div class="row">
+               <img class="center-block" src="img/the-fork.png"/>
+            </div>
+            <div class="row">
+               <img class="center-block" src="img/at.png"/>
+            </div>
+            <div class="row">
+               <img class="center-block"src="img/twin-lakes.png"/>
+            </div>
+            <div class="row">
+               <img class="center-block" src="img/fork-logo.png"/>
+            </div>
+               <p class="lead">
+                  Since 1986, <em>The Fork at Twin Lakes</em> has been serving exceptional 
+                  fare to northeastern Pennsylvania. <em>James Beard House</em> 
+                  honored <b>Chef Peter</b> focuses on the execution of his 
+                  culinary arts while <b>Sharon</b> provides hospitality with 
+                  the panache of a seasoned ma&#238;tre d'. Together they create fresh, 
+                  seasonal, market-driven menus of accessible, delightful cuisine.
+               </p>
+                  <h4>Open Thursday through Sunday, 6 to 10 pm.</h4>
           </div>
 
           <div class="mastfoot">
             <div class="inner">
-              <p>Cover template for <a href="https://getbootstrap.com">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
+              <p>Along a winding country road.</p>
             </div>
           </div>
 
@@ -60,7 +93,9 @@
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
     <script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <!-- <script src="js/bootstrap.min.js"></script> -->
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="js/ie10-viewport-bug-workaround.js"></script>
   </body>
