new background image, tweaked icons, tweaked bootstrap rows

--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
                   <div class="nav-link-word">directions</div>
                </a>
                 <a class="nav-link" href="http://www.facebook.com/forktl">
-                  <div><img src="static/img/facebook-white-36.png" class="social-button"/></div>
-                  <div class="nav-link-word nav-link-word-dis">facebook</div>
+                  <div><i class="fa fa-facebook fa-2x" aria-hidden="true"></i></div>
+                  <div class="nav-link-word">news</div>
                 </a>
                 <a class="nav-link" href="http://www.instagram.com/theforktl/">
-                  <div><img src="static/img/instagram-glyph-white-36.png" class="social-button"/></div>
-                  <div class="nav-link-word nav-link-word-dis">instagram</div>
+                  <div><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></div>
+                  <div class="nav-link-word">@theforktl</div>
                 </a>
                 <a class="nav-link" href="http://twitter.com/forktl">
-                  <div><img src="static/img/twitter-square-white-36.png" class="social-button"/></div>
-                  <div class="nav-link-word nav-link-word-dis">twitter</div>
+                  <div><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></div>
+                  <div class="nav-link-word">@forktl</div>
                 </a>
               </nav>
             </div>
@@ -68,12 +68,16 @@
             <div class="row">
                <img class="center-block img-fluid logo" src="static/img/fork-logo.png"/>
             </div>
-               <p class="lead">
-                  <h4>Open Thursday through Sunday, 6 to 10 pm.</h4>
-               </p>
+            <div class="row">
+               <h4 class="center-block" style="font-weight: 600;">
+                  <p>Open</p>
+                  <p>Thursday - Saturday, 6 to 10 pm</p>
+                  <p>Sunday, 6 to 9 pm</p>
+               </h4>
+            </div>
           </div>
 
-          <div class="mastfoot">
+          <div class="mastfoot" style="font-weight: 600;">
             <div class="inner">
               <p>Along a winding country road.</p>
               <p>814 Twin Lakes Road, Shohola, Pennsylvania, 18458</p>
