--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="cover-container">
 
           <div class="masthead clearfix">
-            <div class="inner">
+            <div class="inner center-block">
               <!-- <h4 class="masthead-brand"><a href="tel:1-570-296-8094">(570) 296-8094</a></h4> -->
               <nav class="nav nav-masthead">
                 <a class="nav-link" href="static/menus/current.pdf">
@@ -69,19 +69,22 @@
                <img class="center-block img-fluid logo" src="static/img/fork-logo.png"/>
             </div>
             <div class="row">
-               <h4 class="center-block" style="font-weight: 600;">
-                  <p>Open</p>
+               <h4 class="center-block" style="font-weight: 600; margin-top: 1rem;">
                   <p>Thursday - Saturday, 6 to 10 pm</p>
                   <p>Sunday, 6 to 9 pm</p>
                </h4>
             </div>
           </div>
 
-          <div class="mastfoot" style="font-weight: 600;">
-            <div class="inner">
-              <p>Along a winding country road.</p>
-              <p>814 Twin Lakes Road, Shohola, Pennsylvania, 18458</p>
-              <p>(570) 296-8094</p>
+          <div class="inner cover container-fluid" style="margin-top: 1.5rem;">
+            <div class="row">
+               <p class="center-block"><em>Along a winding country road.</em></p>
+            </div>
+            <div class="row">
+               <p class="center-block">814 Twin Lakes Road, Shohola, Pennsylvania, 18458</p>
+            </div>
+            <div class="row">
+               <p class="center-block">For reservations call: <a href="tel:15702968094" class="tel-link">(570) 296-8094</a></p>
             </div>
           </div>
 
