rearrange and restyle contact info

--- a/index.html
+++ b/index.html
@@ -74,17 +74,19 @@
                   <p>Sunday, 6 to 9 pm</p>
                </h4>
             </div>
+            <div class="row">
+               <h4 class="center-block" style="font-weight: 600; margin-top: 1rem;">
+                  <p>For reservations call: <a href="tel:15702968094" class="tel-link">(570) 296-8094</a></p>
+               </h4>
+            </div>
           </div>
 
           <div class="inner cover container-fluid" style="margin-top: 1.5rem;">
             <div class="row">
-               <p class="center-block"><em>Along a winding country road.</em></p>
+               <h5 class="center-block" style="font-weight: 600;"><em>Along a winding country road.</em></h5>
             </div>
             <div class="row">
-               <p class="center-block">814 Twin Lakes Road, Shohola, Pennsylvania, 18458</p>
-            </div>
-            <div class="row">
-               <p class="center-block">For reservations call: <a href="tel:15702968094" class="tel-link">(570) 296-8094</a></p>
+               <h5 class="center-block" style="font-weight: 600;">814 Twin Lakes Road, Shohola, Pennsylvania, 18458</h5>
             </div>
           </div>
 
