changed nav elem organization, fixed css (rem to px)

--- a/index.html
+++ b/index.html
@@ -29,33 +29,34 @@
 
           <div class="masthead clearfix">
             <div class="inner center-block">
-              <!-- <h4 class="masthead-brand"><a href="tel:1-570-296-8094">(570) 296-8094</a></h4> -->
-              <nav class="nav nav-masthead">
-                <a class="nav-link" href="static/menus/current.pdf">
-                  <div><i class="fa fa-file fa-2x" aria-hidden="true"></i></div>
-                  <div class="nav-link-word">menus</div>
-                </a>
-                <a class="nav-link" href="https://goo.gl/maps/R2Di3JfENwP2">
-                  <div><i class="fa fa-map fa-2x" aria-hidden="true"></i></div>
-                  <div class="nav-link-word">directions</div>
-               </a>
-                <a class="nav-link" href="http://www.facebook.com/forktl">
-                  <div><i class="fa fa-facebook fa-2x" aria-hidden="true"></i></div>
-                  <div class="nav-link-word">news</div>
-                </a>
-                <a class="nav-link" href="http://www.instagram.com/theforktl/">
-                  <div><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></div>
-                  <div class="nav-link-word">@theforktl</div>
-                </a>
-                <a class="nav-link" href="http://twitter.com/forktl">
-                  <div><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></div>
-                  <div class="nav-link-word">@forktl</div>
-                </a>
+              <nav>
+                <ul class="nav">
+                  <li><a class="nav-link" href="static/menus/current.pdf">
+                     <div><i class="fa fa-file fa-2x" aria-hidden="true"></i></div>
+                     <div class="nav-link-word">menus</div>
+                  </a></li>
+                  <li><a class="nav-link" href="https://goo.gl/maps/R2Di3JfENwP2">
+                     <div><i class="fa fa-map fa-2x" aria-hidden="true"></i></div>
+                     <div class="nav-link-word">directions</div>
+                  </a></li>
+                  <li> <a class="nav-link" href="http://www.facebook.com/forktl">
+                     <div><i class="fa fa-facebook fa-2x" aria-hidden="true"></i></div>
+                     <div class="nav-link-word">news</div>
+                  </a></li>
+                  <li><a class="nav-link" href="http://www.instagram.com/theforktl/">
+                     <div><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></div>
+                     <div class="nav-link-word">@theforktl</div>
+                  </a></li>
+                  <li> <a class="nav-link" href="http://twitter.com/forktl">
+                     <div><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></div>
+                     <div class="nav-link-word">@forktl</div>
+                  </a></li>
+                </ul>
               </nav>
             </div>
           </div>
 
-          <div class="inner cover container-fluid">
+          <div class="inner cover">
             <div class="row">
                <img class="center-block img-fluid logo" src="static/img/the-fork.png"/>
             </div>
@@ -75,18 +76,16 @@
                </h4>
             </div>
             <div class="row">
-               <h4 class="center-block" style="font-weight: 600; margin-top: 1rem;">
-                  <p>For reservations call: <a href="tel:15702968094" class="tel-link">(570) 296-8094</a></p>
+               <h4 class="center-block" style="font-weight: 600;">
+                  <p>For reservations call:</p>
+                  <p><a href="tel:15702968094" class="tel-link">(570) 296-8094</a></p>
                </h4>
             </div>
-          </div>
-
-          <div class="inner cover container-fluid" style="margin-top: 1.5rem;">
-            <div class="row">
-               <h5 class="center-block" style="font-weight: 600;"><em>Along a winding country road.</em></h5>
+            <div class="row" style="font-weight: 600; margin-top: 3rem;">
+               <h6 class="center-block" style="font-weight: 600;"><em>Along a winding country road.</em></h6>
             </div>
             <div class="row">
-               <h5 class="center-block" style="font-weight: 600;">814 Twin Lakes Road, Shohola, Pennsylvania, 18458</h5>
+               <h6 class="center-block" style="font-weight: 600;">814 Twin Lakes Road, Shohola, Pennsylvania, 18458</h6>
             </div>
           </div>
 
