gave nav elem some classes, little bit of css cleanup

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
           <div class="masthead clearfix">
             <div class="inner center-block">
-              <nav>
+              <nav class="navbar navbar-default navbar-static-top">
                 <ul class="nav">
                   <li><a class="nav-link" href="static/menus/current.pdf">
                      <div><i class="fa fa-file fa-2x" aria-hidden="true"></i></div>
