moved static css and js into static dir

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="static/font-awesome-4.7.0/css/font-awesome.min.css">
 
     <!-- Custom styles for this template -->
-    <link href="static/css/cover.css" rel="stylesheet">
+    <link href="cover.css" rel="stylesheet">
   </head>
 
   <body>
