--- a/index.html
+++ b/index.html
@@ -5,18 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-
-    <title>The Fork at Twin Lakes</title>
-
-
-    <!-- Bootstrap core CSS -->
-    <link href="static/css/bootstrap.min.css" rel="stylesheet">
+    <!-- <link rel="icon" href="../../favicon.ico"> -->
+    <title>Cover Template for Bootstrap</title>
 
     <!-- FontAwesome stuff -->
     <link rel="stylesheet" href="static/font-awesome-4.7.0/css/font-awesome.min.css">
-
+    <!-- Bootstrap core CSS -->
+    <link href="static/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom styles for this template -->
-    <link href="cover.css" rel="stylesheet">
+    <link href="css/cover.css" rel="stylesheet">
   </head>
 
   <body>
@@ -28,66 +25,72 @@
         <div class="cover-container">
 
           <div class="masthead clearfix">
-            <div class="inner center-block">
-              <nav class="navbar navbar-default navbar-static-top">
-                <ul class="nav">
-                  <li><a class="nav-link" href="static/menus/current.pdf">
-                     <div><i class="fa fa-file fa-2x" aria-hidden="true"></i></div>
-                     <div class="nav-link-word">menus</div>
-                  </a></li>
-                  <li><a class="nav-link" href="https://goo.gl/maps/R2Di3JfENwP2">
-                     <div><i class="fa fa-map fa-2x" aria-hidden="true"></i></div>
-                     <div class="nav-link-word">directions</div>
-                  </a></li>
-                  <li> <a class="nav-link" href="http://www.facebook.com/forktl">
-                     <div><i class="fa fa-facebook fa-2x" aria-hidden="true"></i></div>
-                     <div class="nav-link-word">news</div>
-                  </a></li>
-                  <li><a class="nav-link" href="http://www.instagram.com/theforktl/">
-                     <div><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></div>
-                     <div class="nav-link-word">@theforktl</div>
-                  </a></li>
-                  <li> <a class="nav-link" href="http://twitter.com/forktl">
-                     <div><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></div>
-                     <div class="nav-link-word">@forktl</div>
-                  </a></li>
-                </ul>
-              </nav>
+            <div class="inner" id="nav-inner">
+              <div class="container" id="nav-container">
+                  <nav class="nav nav-masthead">
+                    <a class="nav-link" href="static/menus/current.pdf">
+                      <i class="fa fa-file fa-2x" aria-hidden="true"></i>
+                      <div class="nav-link-word">menus</div>
+                    </a>
+                    <a class="nav-link" href="https://goo.gl/maps/R2Di3JfENwP2">
+                      <i class="fa fa-map fa-2x" aria-hidden="true"></i>
+                      <div class="nav-link-word">directions</div>
+                    </a>
+                    <a class="nav-link" href="http://www.facebook.com/forktl">
+                      <i class="fa fa-facebook fa-2x" aria-hidden="true"></i>
+                      <div class="nav-link-word">news</div>
+                    </a>
+                    <a class="nav-link" href="http://www.instagram.com/theforktl">
+                      <i class="fa fa-instagram fa-2x" aria-hidden="true"></i>
+                      <div class="nav-link-word">@theforktl</div>
+                    </a>
+                    <a class="nav-link" href="http://twitter.com/forktl">
+                      <i class="fa fa-twitter fa-2x" aria-hidden="true"></i>
+                      <div class="nav-link-word">@forktl</div>
+                    </a>
+                  </nav>
+              </div>
             </div>
           </div>
 
           <div class="inner cover">
-            <div class="row">
+            <div class="cover-row">
                <img class="center-block img-fluid logo" src="static/img/the-fork.png"/>
             </div>
-            <div class="row">
+            <div class="cover-row">
                <img class="center-block img-fluid logo" src="static/img/at.png"/>
             </div>
-            <div class="row">
+            <div class="cover-row">
                <img class="center-block img-fluid logo" src="static/img/twin-lakes.png"/>
             </div>
-            <div class="row">
+            <div class="cover-row">
                <img class="center-block img-fluid logo" src="static/img/fork-logo.png"/>
             </div>
-            <div class="row">
+            <div class="cover-row">
                <h4 class="center-block" style="font-weight: 600; margin-top: 1rem;">
                   <p>Thursday - Saturday, 6 to 10 pm</p>
                   <p>Sunday, 6 to 9 pm</p>
                </h4>
             </div>
-            <div class="row">
+            <div class="cover-row">
                <h4 class="center-block" style="font-weight: 600;">
                   <p>For reservations call:</p>
                   <p><a href="tel:15702968094" class="tel-link">(570) 296-8094</a></p>
                </h4>
             </div>
-            <div class="row" style="font-weight: 600; margin-top: 3rem;">
+            <div class="cover-row" style="font-weight: 600; margin-top: 3rem;">
                <h6 class="center-block" style="font-weight: 600;"><em>Along a winding country road.</em></h6>
             </div>
-            <div class="row">
+            <div class="cover-row">
                <h6 class="center-block" style="font-weight: 600;">814 Twin Lakes Road, Shohola, Pennsylvania, 18458</h6>
             </div>
           </div>
+
+          <!-- <div class="mastfoot"> -->
+          <!--   <div class="inner"> -->
+          <!--     <p>Cover template for <a href="https://getbootstrap.com">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p> -->
+          <!--   </div> -->
+          <!-- </div> -->
 
         </div>
 
@@ -99,11 +102,9 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
-    <script>window.jQuery || document.write('<script src="static/js/jquery.min.js"><\/script>')</script>
+    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-    <!-- <script src="js/bootstrap.min.js"></script> -->
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script src="static/js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="static/js/ie10-viewport-bug-workaround.js"></script>
   </body>
