--- a/index.html
+++ b/index.html
@@ -17,95 +17,75 @@
   </head>
 
   <body>
-
-    <div class="site-wrapper">
-
-      <div class="site-wrapper-inner">
-
-        <div class="cover-container">
-
-          <div class="masthead clearfix">
-            <div class="inner" id="nav-inner">
-              <div class="container" id="nav-container">
-                  <nav class="nav nav-masthead">
-                    <a class="nav-link" href="static/menus/current.pdf">
-                      <i class="fa fa-file fa-2x" aria-hidden="true"></i>
-                      <div class="nav-link-word">menus</div>
-                    </a>
-                    <a class="nav-link" href="https://goo.gl/maps/R2Di3JfENwP2">
-                      <i class="fa fa-map fa-2x" aria-hidden="true"></i>
-                      <div class="nav-link-word">directions</div>
-                    </a>
-                    <a class="nav-link" href="http://www.facebook.com/forktl">
-                      <i class="fa fa-facebook fa-2x" aria-hidden="true"></i>
-                      <div class="nav-link-word">news</div>
-                    </a>
-                    <a class="nav-link" href="http://www.instagram.com/theforktl">
-                      <i class="fa fa-instagram fa-2x" aria-hidden="true"></i>
-                      <div class="nav-link-word">@theforktl</div>
-                    </a>
-                    <a class="nav-link" href="http://twitter.com/forktl">
-                      <i class="fa fa-twitter fa-2x" aria-hidden="true"></i>
-                      <div class="nav-link-word">@forktl</div>
-                    </a>
-                  </nav>
-              </div>
-            </div>
-          </div>
-
-          <div class="inner cover">
-            <div class="cover-row">
-               <img class="center-block img-fluid logo" src="static/img/the-fork.png"/>
-            </div>
-            <div class="cover-row">
-               <img class="center-block img-fluid logo" src="static/img/at.png"/>
-            </div>
-            <div class="cover-row">
-               <img class="center-block img-fluid logo" src="static/img/twin-lakes.png"/>
-            </div>
-            <div class="cover-row">
-               <img class="center-block img-fluid logo" src="static/img/fork-logo.png"/>
-            </div>
-            <div class="cover-row">
-               <h4 class="center-block" style="font-weight: 600; margin-top: 1rem;">
-                  <p>Thursday - Saturday, 6 to 10 pm</p>
-                  <p>Sunday, 6 to 9 pm</p>
-               </h4>
-            </div>
-            <div class="cover-row">
-               <h4 class="center-block" style="font-weight: 600;">
-                  <p>For reservations call:</p>
-                  <p><a href="tel:15702968094" class="tel-link">(570) 296-8094</a></p>
-               </h4>
-            </div>
-            <div class="cover-row" style="font-weight: 600; margin-top: 3rem;">
-               <h6 class="center-block" style="font-weight: 600;"><em>Along a winding country road.</em></h6>
-            </div>
-            <div class="cover-row">
-               <h6 class="center-block" style="font-weight: 600;">814 Twin Lakes Road, Shohola, Pennsylvania, 18458</h6>
-            </div>
-          </div>
-
-          <!-- <div class="mastfoot"> -->
-          <!--   <div class="inner"> -->
-          <!--     <p>Cover template for <a href="https://getbootstrap.com">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p> -->
-          <!--   </div> -->
-          <!-- </div> -->
-
+    <nav class="nav justify-content-center">
+      <a class="nav-link" href="static/menus/current.pdf">
+        <i class="nav-icon fa fa-file fa-2x" aria-hidden="true"></i>
+        <div>menu</div>
+      </a>
+      <a class="nav-link" href="https://goo.gl/maps/R2Di3JfENwP2">
+        <i class="nav-icon fa fa-map fa-2x" aria-hidden="true"></i>
+        <div>menu</div>
+      </a>
+      <a class="nav-link" href="http://www.facebook.com/forktl">
+        <i class="nav-icon fa fa-facebook fa-2x" aria-hidden="true"></i>
+        <div>menu</div>
+      </a>
+      <a class="nav-link" href="http://www.instagram.com/theforktl/">
+        <i class="nav-icon fa fa-instagram fa-2x" aria-hidden="true"></i>
+        <div>menu</div>
+      </a>
+      <a class="nav-link" href="http://twitter.com/forktl">
+        <i class="nav-icon fa fa-twitter fa-2x" aria-hidden="true"></i>
+        <div>menu</div>
+      </a>
+    </nav>
+    <div class="container" id="content">
+      <div class="col-12">
+        <div class="row">
+          <img class="center-block img-fluid logo" src="static/img/the-fork.png"/>
         </div>
-
+        <div class="row">
+          <img class="center-block img-fluid logo" src="static/img/at.png"/>
+        </div>
+        <div class="row">
+          <img class="center-block img-fluid logo" src="static/img/twin-lakes.png"/>
+        </div>
+        <div class="row">
+          <img class="center-block img-fluid logo" src="static/img/fork-logo.png"/>
+        </div>
+        <div class="row">
+          <h4 class="center-block">
+            <p>Thursday - Saturday, 6 to 10 pm</p>
+            <p>Sunday, 6 to 9 pm</p>
+          </h4>
+        </div>
+        <div class="row">
+          <h4 class="center-block">
+            <p>For reservations call:</p>
+            <p><a href="tel:15702968094" class="tel-link">(570) 296-8094</a></p>
+          </h4>
+        </div>
+        <div class="row footer">
+          <div class="center-block">
+            <h6><em>Along a winding country road.</em></h6>
+          </div>
+        </div>
+        <div class="row">
+          <div class="center-block">
+            <h6>814 Twin Lakes Road, Shohola, Pennsylvania, 18458</h6>
+          </div>
+        </div>
       </div>
-
     </div>
 
     <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
-    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-    <script src="static/js/bootstrap.min.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="static/js/ie10-viewport-bug-workaround.js"></script>
+      ================================================== -->
+      <!-- Placed at the end of the document so the pages load faster -->
+      <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+      <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+      <script src="static/js/bootstrap.min.js"></script>
+      <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+      <script src="static/js/ie10-viewport-bug-workaround.js"></script>
   </body>
 </html>
