starting from scratch with v4

--- a/index.html
+++ b/index.html
@@ -17,66 +17,71 @@
   </head>
 
   <body>
-    <nav class="nav justify-content-center">
-      <a class="nav-link" href="static/menus/current.pdf">
-        <i class="nav-icon fa fa-file fa-2x" aria-hidden="true"></i>
-        <div>menu</div>
-      </a>
-      <a class="nav-link" href="https://goo.gl/maps/R2Di3JfENwP2">
-        <i class="nav-icon fa fa-map fa-2x" aria-hidden="true"></i>
-        <div>menu</div>
-      </a>
-      <a class="nav-link" href="http://www.facebook.com/forktl">
-        <i class="nav-icon fa fa-facebook fa-2x" aria-hidden="true"></i>
-        <div>menu</div>
-      </a>
-      <a class="nav-link" href="http://www.instagram.com/theforktl/">
-        <i class="nav-icon fa fa-instagram fa-2x" aria-hidden="true"></i>
-        <div>menu</div>
-      </a>
-      <a class="nav-link" href="http://twitter.com/forktl">
-        <i class="nav-icon fa fa-twitter fa-2x" aria-hidden="true"></i>
-        <div>menu</div>
-      </a>
-    </nav>
-    <div class="container" id="content">
-      <div class="col-12">
-        <div class="row">
-          <img class="center-block img-fluid logo" src="static/img/the-fork.png"/>
-        </div>
-        <div class="row">
-          <img class="center-block img-fluid logo" src="static/img/at.png"/>
-        </div>
-        <div class="row">
-          <img class="center-block img-fluid logo" src="static/img/twin-lakes.png"/>
-        </div>
-        <div class="row">
-          <img class="center-block img-fluid logo" src="static/img/fork-logo.png"/>
-        </div>
-        <div class="row">
-          <h4 class="center-block">
-            <p>Thursday - Saturday, 6 to 10 pm</p>
-            <p>Sunday, 6 to 9 pm</p>
-          </h4>
-        </div>
-        <div class="row">
-          <h4 class="center-block">
-            <p>For reservations call:</p>
-            <p><a href="tel:15702968094" class="tel-link">(570) 296-8094</a></p>
-          </h4>
-        </div>
-        <div class="row footer">
-          <div class="center-block">
-            <h6><em>Along a winding country road.</em></h6>
+    <div class="site-wrapper">
+      <div class="row fixed-top" id="header">
+        <div class="container" id="navbar-container">
+        <nav class="navbar navbar-toggleable-sm justify-content-between">
+          <button class="navbar-toggler navbar-toggler-left"
+                  type="button"
+                  data-toggle="collapse"
+                  data-target="#navbarSupportedContent"
+                  aria-controls="navbarSupportedContent"
+                  aria-expanded="false"
+                  aria-label="Toggle navigation">
+            <i class="fa fa-bars fa-inverse fa-2x" aria-hidden="true"></i>
+          </button>
+          <div class=".navbar-brand">
+            <img class="center-block img-fluid logo" src="static/img/the-fork.png"/>
+            <br/>
+            <img class="center-block img-fluid logo" src="static/img/at.png"/>
+            <br/>
+            <img class="center-block img-fluid logo" src="static/img/twin-lakes.png"/>
+            <br/>
+            <img class="center-block img-fluid logo" src="static/img/fork-logo.png"/>
           </div>
-        </div>
-        <div class="row">
-          <div class="center-block">
-            <h6>814 Twin Lakes Road, Shohola, Pennsylvania, 18458</h6>
+          <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+            <div class="navbar-nav justify-content-center">
+              <a class="nav-link nav-item" href="static/menus/current.pdf">
+                <i class="nav-icon fa fa-file fa-2x" aria-hidden="true"></i>
+                <div>menu</div>
+              </a>
+              <a class="nav-link nav-item" href="https://goo.gl/maps/R2Di3JfENwP2">
+                <i class="nav-icon fa fa-map fa-2x" aria-hidden="true"></i>
+                <div>directions</div>
+              </a>
+              <a class="nav-link nav-item" href="http://www.facebook.com/forktl">
+                <i class="nav-icon fa fa-facebook fa-2x" aria-hidden="true"></i>
+                <div>@forktl</div>
+              </a>
+              <a class="nav-link nav-item" href="http://www.instagram.com/theforktl/">
+                <i class="nav-icon fa fa-instagram fa-2x" aria-hidden="true"></i>
+                <div>@theforktl</div>
+              </a>
+              <a class="nav-link nav-item" href="http://twitter.com/forktl">
+                <i class="nav-icon fa fa-twitter fa-2x" aria-hidden="true"></i>
+                <div>@forktl</div>
+              </a>
+            </div>
           </div>
+        </nav>
         </div>
       </div>
-    </div>
+      <div class="row fixed-bottom meta justify-content-center">
+        <h4>
+          <p><em>Along a winding country road.</em></p>
+          <p>Thursday - Saturday, 6 to 10 pm<br/>Sunday, 6 to 9 pm</p>
+          <p>For reservations call:<br/><a href="tel:15702968094" class="tel-link">(570) 296-8094</a></p>
+          <p>814 Twin Lakes Road<br/>Shohola, Pennsylvania, 18458</p>
+        </h4>
+      </div>
+      <div class="row fixed-bottom meta justify-content-end">
+        <h4>
+          <p><em>Along a winding country road.</em></p>
+          <p>Thursday - Saturday, 6 to 10 pm<br/>Sunday, 6 to 9 pm</p>
+          <p>For reservations call:<br/><a href="tel:15702968094" class="tel-link">(570) 296-8094</a></p>
+          <p>814 Twin Lakes Road<br/>Shohola, Pennsylvania, 18458</p>
+        </h4>
+      </div>
 
     <!-- Bootstrap core JavaScript
       ================================================== -->
