--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <!-- <link rel="icon" href="../../favicon.ico"> -->
-    <title>Cover Template for Bootstrap</title>
+    <title>The Fork at Twin Lakes</title>
 
     <!-- FontAwesome stuff -->
     <link rel="stylesheet" href="static/font-awesome-4.7.0/css/font-awesome.min.css">
