--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
 
   <body>
     <div class="site-wrapper">
-      <div class="row fixed-top" id="header">
-        <div class="container" id="navbar-container">
-        <nav class="navbar navbar-toggleable-sm justify-content-between">
+      <div class="container-fluid">
+        <nav class="navbar navbar-toggleable-sm">
           <button class="navbar-toggler navbar-toggler-left"
                   type="button"
                   data-toggle="collapse"
@@ -39,7 +38,7 @@
             <br/>
             <img class="center-block img-fluid logo" src="static/img/fork-logo.png"/>
           </div>
-          <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+          <div class="collapse navbar-collapse justify-content-end align-self-start" id="navbarSupportedContent">
             <div class="navbar-nav justify-content-center">
               <a class="nav-link nav-item" href="static/menus/current.pdf">
                 <i class="nav-icon fa fa-file fa-2x" aria-hidden="true"></i>
@@ -64,23 +63,26 @@
             </div>
           </div>
         </nav>
+      </div>
+      <div class="container-fluid fill">
+      </div>
+      <div class="container-fluid">
+        <div class="meta row justify-content-center">
+            <h4 >
+              <p><em>Along a winding country road.</em></p>
+              <p>Thursday - Saturday, 6 to 10 pm<br/>Sunday, 6 to 9 pm</p>
+              <p>For reservations call:<br/><a href="tel:15702968094" class="tel-link">(570) 296-8094</a></p>
+              <p>814 Twin Lakes Road<br/>Shohola, Pennsylvania, 18458</p>
+            </h4>
         </div>
-      </div>
-      <div class="row fixed-bottom meta justify-content-center">
-        <h4>
-          <p><em>Along a winding country road.</em></p>
-          <p>Thursday - Saturday, 6 to 10 pm<br/>Sunday, 6 to 9 pm</p>
-          <p>For reservations call:<br/><a href="tel:15702968094" class="tel-link">(570) 296-8094</a></p>
-          <p>814 Twin Lakes Road<br/>Shohola, Pennsylvania, 18458</p>
-        </h4>
-      </div>
-      <div class="row fixed-bottom meta justify-content-end">
-        <h4>
-          <p><em>Along a winding country road.</em></p>
-          <p>Thursday - Saturday, 6 to 10 pm<br/>Sunday, 6 to 9 pm</p>
-          <p>For reservations call:<br/><a href="tel:15702968094" class="tel-link">(570) 296-8094</a></p>
-          <p>814 Twin Lakes Road<br/>Shohola, Pennsylvania, 18458</p>
-        </h4>
+        <div class="meta row justify-content-end">
+            <h4>
+              <p><em>Along a winding country road.</em></p>
+              <p>Thursday - Saturday, 6 to 10 pm<br/>Sunday, 6 to 9 pm</p>
+              <p>For reservations call:<br/><a href="tel:15702968094" class="tel-link">(570) 296-8094</a></p>
+              <p>814 Twin Lakes Road<br/>Shohola, Pennsylvania, 18458</p>
+            </h4>
+        </div>
       </div>
 
     <!-- Bootstrap core JavaScript
