--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <body>
     <div class="site-wrapper container-fluid">
-      <div class="container-fluid">
+      <div class="container-fluid" id="navigation-container">
         <div class="row content-row" id="navigation">
           <div class="col-lg-auto">
             <img class="img-fluid" src="static/img/fork6-sm.png"/>
@@ -49,7 +49,7 @@
           </div>
         </div>
       </div>
-      <div class="container-fluid">
+      <div class="container-fluid" id="fill">
       </div>
       <div class="container-fluid">
         <div class="row content-row" id="meta">
