reorganize and rename images. switch to a new background image on mobile

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="site-wrapper container-fluid">
       <div class="container-fluid" id="navigation-container">
         <div class="row content-row" id="navigation">
-          <div class="col-lg-auto">
+          <div class="col-lg-auto" id="logo-column">
             <img class="img-fluid" src="static/img/fork6-sm.png"/>
           </div>
           <div class="col-lg-auto">
